# snakefmt

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  TODOs.rst  codecov.yml  pyproject.toml  test.config.toml  test.smk  test2.smk
.github/: CODEOWNERS
.github/workflows/: ci.yaml  conventional-prs.yaml  release-please.yaml  release.yaml
.planning/: task-status.md
docs/: editor_integration.md  snakefmt_design.md
docs/adr/: 0001-shell-formatter-distribution.md  README.md
docs/plans/: pr-295-heredoc-masking.md  pr-295-review-response.md  shell-formatting-trailing-newline-bugfix.md
lua/snakefmt/: config.lua  init.lua  paths.lua
plugin/: snakefmt.vim
snakefmt/: __init__.py  __main__.py  blocken.py  config.py  diff.py  exceptions.py  formatter.py  logging.py  parser.py  shell_formatter.py  snakefmt.py  types.py  warnings.py
snakefmt/parser/: grammar.py  parser.py  syntax.py
tests/: __init__.py  conftest.py  test_blocken.py  test_config.py  test_diff.py  test_formatter.py  test_grammar.py  test_logging.py  test_main.py  test_parser.py  test_shell_formatter.py  test_snakefmt.py  test_v8_v9_features.py
tests/test_data/include_after_if/: input.smk
