[tool.poetry]
name = "snakefmt"
version = "0.9.0"
description = "The uncompromising Snakemake code formatter"
authors = ["Michael Hall <michael@mbh.sh>", "Brice Letcher <bletcher@ebi.ac.uk>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/snakemake/snakefmt"
repository = "https://github.com/snakemake/snakefmt"
documentation = "https://github.com/snakemake/snakefmt/blob/master/README.md"
keywords = ["python", "snakemake", "code", "formatter", "parser", "workflow", "management", "systems", "black"]

[tool.poetry.scripts]
snakefmt = 'snakefmt.snakefmt:main'

[tool.poetry.dependencies]
python = "^3.8.1"
click = "^8.0.0"
black = "^23.12.1"
toml = "^0.10.2"
importlib_metadata = {version = ">=1.7.0,<5.0", python = "<3.8"}

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
flake8 = "^7.0"
snakemake = "<8.0"
isort = "^5.1.0"
pynvim = "~0.4.3"

[tool.poetry.urls]
"Snakemake Documentation" = "https://snakemake.readthedocs.io/"
"Snakemake Repository" = "https://github.com/snakemake/snakemake"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"

